.xmonad/xmonad.errors

xmonad.hs:58:92: error:
    Not in scope: ‘W.sink’
    No module named ‘W’ is imported.
   |
58 |     ((m .|. shiftMask               , xK_l          ), sendMessage withFocused $ windows . W.sink),
   |                                                                                            ^^^^^^
